--- a/bolivariano/build.gradle
+++ b/bolivariano/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.ws:spring-ws-core'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+    
     implementation 'commons-net:commons-net:3.6'
 
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
